--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-
-
-<!-- index.html -->
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Verified Real Estate Leads • [Your Agency]</title>
