--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!doctype html>
 <html lang="en">
 <head>
+ <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Verified Real Estate Leads • [Your Agency]</title>
   <meta name="description" content="Exclusive, human-verified buyer & seller leads for real estate pros. Pay only for quality. Fast delivery. CRM-ready CSV.">
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- CSS Files (order matters: index first, style second for overrides/animations) -->
+  <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="style.css">
+
   <meta name="theme-color" content="#0a2540">
+</head>
+
 </head>
 <body>
   <header class="site-header">
