--- a/index.html
+++ b/index.html
@@ -1,1 +1,263 @@
+<!-- index.html -->
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>EstateSpark — Real Estate Copywriting (Aston, TX)</title>
+  <meta name="description" content="Real estate email & listing copywriting for Aston, Texas agents — faster closes, more responses, predictable listings." />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- NAV -->
+  <header class="nav-root" id="top">
+    <nav class="nav container">
+      <div class="brand">EstateSpark</div>
 
+      <button id="navToggle" class="nav-toggle" aria-label="Toggle menu">☰</button>
+
+      <ul class="nav-links" id="navLinks">
+        <li><a href="#stories">Success Stories</a></li>
+        <li><a href="#deliver">What I Deliver</a></li>
+        <li><a href="#case">Case Study</a></li>
+        <li><a href="#how">How It Works</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a class="cta" href="#contact">Book Strategy Call</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- HERO / ZERO SECTION -->
+  <section class="hero">
+    <div class="container hero-grid">
+      <div class="hero-left">
+        <p class="eyebrow">Aston, Texas — local & proven</p>
+        <h1>Words that win listings and turn prospects into buyers.</h1>
+        <p class="sub">Email sequences and listing copy crafted for Aston agents who want faster offers, fewer price reductions, and predictable sales.</p>
+        <div class="hero-ctas">
+          <a class="btn primary" href="#contact">Get Your Free Audit</a>
+          <a class="link" href="#demo">Watch Demo</a>
+        </div>
+
+        <ul class="hero-bullets">
+          <li>High-converting listing headlines</li>
+          <li>7-email onboarding & follow-up sequences</li>
+          <li>Localized messaging for Aston neighborhoods</li>
+        </ul>
+      </div>
+
+      <div class="hero-right" role="img" aria-label="Email outreach illustration">
+        <!-- simple illustrative BSL with gradient -->
+        <div class="bsl-card">
+          <svg viewBox="0 0 600 400" class="bsl-svg" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <defs>
+              <linearGradient id="g" x1="0" x2="1">
+                <stop offset="0" stop-color="#0066ff"/>
+                <stop offset="1" stop-color="#00b4ff"/>
+              </linearGradient>
+            </defs>
+            <rect rx="20" width="600" height="400" fill="url(#g)" opacity="0.12"/>
+            <g fill="#fff" opacity="0.95">
+              <rect x="40" y="50" rx="8" width="520" height="38"/>
+              <rect x="40" y="100" rx="8" width="380" height="20"/>
+              <rect x="40" y="140" rx="8" width="460" height="20"/>
+              <rect x="40" y="180" rx="8" width="320" height="20"/>
+              <circle cx="500" cy="300" r="36"/>
+            </g>
+          </svg>
+          <div class="bsl-caption">Email-first outreach + listing copy that speaks like a neighbor.</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT / WHY -->
+  <section class="section container" id="about">
+    <div class="two-col">
+      <div>
+        <h2>Why You Need EstateSpark</h2>
+        <p class="lead">Most listings fail because the message isn’t right — not the neighborhood, not the photos. I write the copy that starts conversations, builds trust, and gets offers faster.</p>
+
+        <h3>My Story</h3>
+        <p>I grew up near Aston, TX and spent five years writing email sequences and listing copy for top-performing agents. I test every line, track the results, and iterate until the sequence converts. Your story + my copy = faster listings and happier clients.</p>
+
+        <ul class="why-list">
+          <li><strong>Local-first:</strong> hyper-local phrasing for Aston buyers</li>
+          <li><strong>Proven:</strong> Case studies show 20–45% uplift in responses</li>
+          <li><strong>Practical:</strong> Ready-to-send emails, optimized CTAs</li>
+        </ul>
+      </div>
+      <aside class="profile-card">
+        <img src="https://via.placeholder.com/360x240?text=Your+Photo" alt="Profile photo" />
+        <h4>Awais — Founder, EstateSpark</h4>
+        <p>Real estate copywriter. Former listing manager. Houses sold: dozens across Aston & Austin area.</p>
+        <a class="btn secondary" href="#contact">Request Local Audit</a>
+      </aside>
+    </div>
+  </section>
+
+  <!-- SUCCESS STORIES -->
+  <section class="section gray" id="stories">
+    <div class="container">
+      <h2>Success Stories</h2>
+      <p class="center">Real Aston agents. Real results.</p>
+
+      <div class="cards">
+        <article class="card">
+          <img src="https://via.placeholder.com/140?text=Agent1" alt="" />
+          <h4>Marissa J. — Aston</h4>
+          <p class="result">Closed 12 listings in 30 days after a subject-line + email overhaul.</p>
+        </article>
+
+        <article class="card">
+          <img src="https://via.placeholder.com/140?text=Agent2" alt="" />
+          <h4>Connor P. — West Aston</h4>
+          <p class="result">Reduced time-on-market by 36% with localized listing headlines.</p>
+        </article>
+
+        <article class="card">
+          <img src="https://via.placeholder.com/140?text=Agent3" alt="" />
+          <h4>Sophia R. — Aston Hills</h4>
+          <p class="result">Generated 45% more tour signups from email campaigns.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- WHAT I DELIVER -->
+  <section class="section container" id="deliver">
+    <h2>What I Deliver</h2>
+    <div class="features">
+      <div class="feature">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M3 6h18v2H3zM3 11h18v2H3zM3 16h18v2H3z"/></svg>
+        <h3>Listing Copy</h3>
+        <p>Headlines, descriptions, premium opening lines tuned for Aston neighborhoods.</p>
+      </div>
+      <div class="feature">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M12 2l4 4h-3v7h-2V6H8z"/></svg>
+        <h3>Email Sequences</h3>
+        <p>7-email seller sequences: stress relief, value, insight, social proof, urgency, objections, close.</p>
+      </div>
+      <div class="feature">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M12 12a5 5 0 100-10 5 5 0 000 10z"/></svg>
+        <h3>Ad Copy & Lead Magnets</h3>
+        <p>Short-form ads and lead magnets that convert browsers into leads.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CASE STUDY -->
+  <section class="section accent" id="case">
+    <div class="container">
+      <h2>Case Study — 404 Maple St., Aston</h2>
+      <div class="case-grid">
+        <div>
+          <p class="lead">Problem: The listing sat 45 days with low interest. The headline was generic and emails weren’t reaching the right buyers.</p>
+          <h3>Solution</h3>
+          <ol>
+            <li>Rewrote headline & opening paragraph to highlight school district + commuter benefits.</li>
+            <li>Deployed a 7-email sequence to warm leads and past buyers.</li>
+            <li>Created an urgency-driven CTA for open-house signups.</li>
+          </ol>
+          <h3>Results</h3>
+          <p><strong>Offer received in 11 days.</strong> Time-on-market reduced 75% and final sale price improved by 3.4% compared to initial listing price.</p>
+        </div>
+        <aside class="case-card">
+          <img src="https://via.placeholder.com/420x260?text=Maple+St+Before+After" alt="Case study image"/>
+        </aside>
+      </div>
+    </div>
+  </section>
+
+  <!-- WARM CTA -->
+  <section class="section container warm-cta">
+    <div class="cta-wrap">
+      <h2>Ready to win your next listing?</h2>
+      <p>Get a free copy audit and a 15-minute strategy call focused on Aston, Texas buyers.</p>
+      <a class="btn primary large" href="#contact">Claim Your Free Audit</a>
+    </div>
+  </section>
+
+  <!-- METHODOLOGY -->
+  <section class="section container" id="how">
+    <h2>Our Methodology</h2>
+    <div class="steps">
+      <div class="step">
+        <div class="num">1</div>
+        <h4>Research</h4>
+        <p>Hyper-local comps, buyer psych, school & transport points.</p>
+      </div>
+      <div class="step">
+        <div class="num">2</div>
+        <h4>Write & Test</h4>
+        <p>Craft messaging and A/B subject-line tests.</p>
+      </div>
+      <div class="step">
+        <div class="num">3</div>
+        <h4>Deploy & Optimize</h4>
+        <p>Send, measure open/response, iterate quickly.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ (Accordion) -->
+  <section class="section gray container" id="faq">
+    <h2>FAQ</h2>
+    <div class="accordion">
+      <button class="acc-toggle">How long until I see results?<span class="acc-icon">+</span></button>
+      <div class="acc-panel">Most clients see measurable response improvements within 7–14 days of a campaign launch.</div>
+
+      <button class="acc-toggle">Do you write property descriptions too?<span class="acc-icon">+</span></button>
+      <div class="acc-panel">Yes — headlines, full descriptions, and neighborhood blurbs are included.</div>
+
+      <button class="acc-toggle">Can you integrate with my CRM?<span class="acc-icon">+</span></button>
+      <div class="acc-panel">We deliver copy and simple flow instructions that integrate with common CRMs. We can consult on setup.</div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="section container" id="contact">
+    <h2>Contact — Get a Free Audit</h2>
+    <p class="lead">Fill in the quick form and I’ll send a personalized audit for your listing or pipeline.</p>
+
+    <form id="contactForm" class="contact-form" onsubmit="return false;">
+      <div class="form-row">
+        <label for="name">Name</label>
+        <input id="name" name="name" required placeholder="Your name">
+      </div>
+
+      <div class="form-row">
+        <label for="email">Email</label>
+        <input id="email" name="email" type="email" required placeholder="you@agency.com">
+      </div>
+
+      <div class="form-row">
+        <label for="message">Message / Listing link (optional)</label>
+        <textarea id="message" name="message" rows="4" placeholder="Tell me about the listing or your pain point"></textarea>
+      </div>
+
+      <div class="form-row">
+        <button class="btn primary" id="sendBtn">Send Audit Request</button>
+        <div id="formStatus" class="form-status" aria-live="polite"></div>
+      </div>
+    </form>
+
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div>
+        <strong>EstateSpark</strong>
+        <p>Real estate copywriting for Aston, Texas agents.</p>
+      </div>
+      <div>
+        <p><a href="#top">Back to top</a></p>
+        <p>&copy; <span id="year"></span> EstateSpark</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
