--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <!-- LEFT SIDE -->
       <div class="testimonial-left">
-        <img src="client.jpg" alt="Client Photo" class="client-photo">
+        <img src="image/juliana-cifuentes.jpg" alt="Client Photo" class="client-photo">
         <div class="client-info">
           <h4 class="client-name">Julia Anderson</h4>
           <p class="client-role">Licensed Realtor</p>
@@ -151,8 +151,8 @@
         </div>
 
         <div class="proof-images">
-          <img src="crm.png" alt="CRM Proof" class="proof-card">
-          <img src="inbox.png" alt="Inbox Proof" class="proof-card">
+          <img src="image/CRM.jpg" alt="CRM Proof" class="proof-card">
+          <img src="image/inbox.jpg" alt="Inbox Proof" class="proof-card">
         </div>
       </div>
 
