--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="client-info">
           <h4 class="client-name">Julia Anderson</h4>
           <p class="client-role">Licensed Realtor</p>
-          <p class="client-address">New York, USA</p>
+          <p class="client-address">Austin,TX,USA</p>
         </div>
         <div class="client-quote">
           <p>
